@@ -13,32 +13,47 @@ import com.example.HospitalConSpring.repository.DoctoresRepository;
 import com.example.HospitalConSpring.repository.PacienteRepository;
 import com.example.HospitalConSpring.repository.TurnoRepository;
 import org.springframework.data.jpa.domain.Specification;
+import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
 
+@Service
 public class TurnoServisImpl implements TurnoServis {
-    private PacienteRepository pacienteRepository;
-    private DoctoresRepository doctoresRepository;
 
-    private TurnoRepository turnoRepository;
+    private final PacienteRepository pacienteRepository;
+    private final DoctoresRepository doctoresRepository;
+    private final TurnoRepository turnoRepository;
+    private final TurnoMapper turnoMapper;
 
-    private TurnoMapper turnoMapper;
+    public TurnoServisImpl(PacienteRepository pacienteRepository,
+                           DoctoresRepository doctoresRepository,
+                           TurnoRepository turnoRepository,
+                           TurnoMapper turnoMapper) {
+        this.pacienteRepository = pacienteRepository;
+        this.doctoresRepository = doctoresRepository;
+        this.turnoRepository = turnoRepository;
+        this.turnoMapper = turnoMapper;
+    }
+
     @Override
     public TurnoDtoRes createTurno(TurnoDtoReq dto) {
         Paciente paciente = pacienteRepository.findById(dto.paciente().getId())
                 .orElseThrow(() -> new RuntimeException("Paciente no encontrado"));
-
         Doctores doctor = doctoresRepository.findById(dto.doctor().getId())
                 .orElseThrow(() -> new RuntimeException("Doctor no encontrado"));
 
-        Turno turno = new Turno();
-        turno.setHora(dto.hora());
-        turno.setPaciente(paciente);
-        turno.setDoctor(doctor);
-        turno.setEstado(EstadoTurno.RESERVADO);
+        Turno turno = Turno.builder()
+                .fecha(dto.fecha())
+                .hora(dto.hora())
+                .paciente(paciente)
+                .doctor(doctor)
+                .estado(EstadoTurno.RESERVADO)
+                .build();
 
-        return turnoMapper.toDto(turnoRepository.save(turno));
+        turno = turnoRepository.save(turno);
+        return turnoMapper.toDto(turno);
     }
 
     @Override
@@ -46,12 +61,13 @@ public class TurnoServisImpl implements TurnoServis {
         Turno turno = turnoRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Turno no encontrado"));
 
-        Paciente paciente = pacienteRepository.findById(dto.Id())
+        Paciente paciente = pacienteRepository.findById(dto.paciente().getId())
                 .orElseThrow(() -> new RuntimeException("Paciente no encontrado"));
 
-        Doctores doctor = doctoresRepository.findById(dto.Id())
+        Doctores doctor = doctoresRepository.findById(dto.doctor().getId())
                 .orElseThrow(() -> new RuntimeException("Doctor no encontrado"));
 
+        turno.setFecha(dto.fecha());
         turno.setHora(dto.hora());
         turno.setPaciente(paciente);
         turno.setDoctor(doctor);
@@ -79,22 +95,22 @@ public class TurnoServisImpl implements TurnoServis {
     @Override
     public List<TurnoDtoRes> getTurnosByPaciente(Long pacienteId) {
         return turnoRepository.findAll().stream()
-                .filter(t -> t.getPaciente().getId().equals(pacienteId))
+                .filter(t -> t.getPaciente() != null && t.getPaciente().getId().equals(pacienteId))
                 .map(turnoMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<TurnoDtoRes> getTurnosByDoctor(Long doctorId) {
         return turnoRepository.findAll().stream()
-                .filter(t -> t.getDoctor().getId().equals(doctorId))
+                .filter(t -> t.getDoctor() != null && t.getDoctor().getId().equals(doctorId))
                 .map(turnoMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<TurnoDtoRes> findTurnos(TurnoFilterDto filter) {
-        Specification<Turno> spec = Specification.where(null);
+        Specification<Turno> spec = Specification.where((Specification<Turno>) null);
 
         if (filter.pacienteId() != null) {
             spec = spec.and((root, query, cb) ->
@@ -106,16 +122,17 @@ public class TurnoServisImpl implements TurnoServis {
         }
         if (filter.fecha() != null) {
             spec = spec.and((root, query, cb) ->
-                    cb.equal(cb.function("DATE", LocalDate.class, root.get("fechaHora")), filter.fecha()));
+                    cb.equal(root.get("fecha"), java.sql.Date.valueOf(filter.fecha())));
         }
         if (filter.estado() != null) {
             spec = spec.and((root, query, cb) ->
-                    cb.equal(root.get("estado"), filter.estado()));
+                    cb.equal(root.get("estado"), EstadoTurno.valueOf(filter.estado())));
         }
 
         return turnoRepository.findAll(spec).stream()
                 .map(turnoMapper::toDto)
-                .toList();
-    }
+                .collect(Collectors.toList());
     }
 }
+
+
